Add style navbar and hero

--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -1,4 +1,114 @@
+@import url('https://fonts.googleapis.com/css2?family=Cormorant+Garamond:wght@400;500;600&display=swap');
+
+
+:root {
+    --heading-color: #566472;
+    --description-color: rgba(86, 100, 114, 0.7);
+    --primary-color: #373C54;
+    --hover: #D2AB67;
+    --divider: #E6E6E6;
+    --border: #E9E9E9;
+    --bg-color: #fcfcfc;
+}
+
 * {
     padding: 0;
     margin: 0;
+    box-sizing: border-box;
+    font-family: 'Cormorant Garamond', serif;
 }
+
+body,
+html {
+    padding: 0;
+    margin: 0;
+    scroll-behavior: smooth;
+    background-color: var(--bg-color);
+}
+
+.skip_link {
+    position: fixed;
+    top: -400px;
+    left: 50%;
+    padding: 15px 20px;
+}
+
+.skip_link:focus {
+    top: 15px;
+}
+
+/* Navbar */
+
+header {
+    padding: 15px 20px;
+    width: 100%;
+    background-color: #fff;
+}
+
+.logo{ 
+    /* background-image: url('../public/image/logo.png'); */
+    /* background-color: #D2AB67;
+    width: 50%; */
+    height: 45px;
+}
+
+.nav-item {
+    margin-right: 30px;
+    font-size: 20px;
+}
+
+.nav-item a {
+    text-decoration: none;
+    color: var(--heading-color);
+    padding-bottom: 5px;
+    min-height: 44px;
+}
+
+.nav-item a:after {
+    border-bottom: 3px solid var(--hover);
+    content: '';
+    display: block;
+    transition: all ease-in-out 0.2s;
+    width: 0;
+}
+
+.nav-item a:hover {
+    color: var(--heading-color);
+}
+
+.nav-item a:hover:after {
+    width: 100%;
+}
+
+.navbar-toggler {
+    min-height: 44px;
+    min-width: 44px;
+}
+
+/* Hero */
+.hero_container {
+    display: flex;
+    align-items: center;
+    height: 80vh;
+    width: 100%;
+    text-align: center;
+    background-image: linear-gradient(90deg, rgba(18, 18, 18, 0.35),
+            rgba(18, 18, 18, 0.35)),
+        url("../public/image/img1.jpg");
+    background-size: cover;
+    background-position: center;
+}
+
+.hero-title {
+    position: relative;
+    left: 50%;
+    color: #fff;
+    transform: translate(-50%, -50%);
+    text-transform: capitalize;
+    font-weight: 400;
+    letter-spacing: 2px;
+    font-size: 50px;
+}
+
+
+
