Add our service

--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -48,9 +48,46 @@
       </header>
 
       <main>
+        
         <section class="hero_container">
             <h1 tabindex="0" class="hero-title">comfy with indonesian vibes</h1>
         </section>
+
+        <section class="explore_content" id="main_content">
+          <h3>Our Service</h3>
+  
+          <div class="grid-service">
+              <div class="g-col-6 g-col-md-4">
+                  <img class="list-item-image" src="./image/img3.jpg" alt="jumbotron" />
+                  <p class="title_service">
+                      Retail
+                  </p>
+                  <p class="description">
+                      Kami memiliki sejarah yang panjang dan pengalaman dalam memproduksi batik berkualitas tinggi
+                      untuk segala acara. Beberapa merk yang paling populer ada di e commerce kesayangan anda
+                  </p>
+              </div>
+              <div class="g-col-6 g-col-md-4">
+                  <img class="list-item-image" src="./image/img2.jpg" alt="jumbotron" />
+                  <p class="title_service">pesanan khusus</p>
+                  <p class="description">Melayani pemesanan khusus, baik pesanan pribadi dalam jumlah yang kecil
+                      maupun
+                      besar berupa
+                      pesanan perusahaan. Desainer kami yang berpengalaman, pekerja terlatih, dan fasilitas produksi
+                      yang
+                      mutakhir akan membantu klien kami untuk dapat merealisasikan visi mereka.</p>
+              </div>
+              <div class="g-col-6 g-col-md-4">
+                  <img class="list-item-image" src="./image/img4.jpg" alt="jumbotron" />
+                  <p class="title_service">Expor</p>
+                  <p class="description">Memiliki bisnis ekspor yang bertumbuh pesat. Meski Eropa adalah tujuan
+                      utamanya,
+                      kami juga melayani
+                      Negara-negara lain di Asia dan Amerika Utara sebagai pasar yang marak dan berkembang.</p>
+              </div>
+          </div>
+      </section>
+  
       </main>
     
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js"
