--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -110,5 +110,50 @@ header {
     font-size: 50px;
 }
 
+/*explore_content */
+
+.explore_content {
+    margin: auto 0;
+    width: 100%;
+    padding: 0 40px;
+}
+
+.explore_content h3 {
+    text-align: center;
+    color: var(--heading-color);
+    font-size: 38px;
+    font-weight: 500;
+    margin-top: 50px;
+    text-transform: uppercase;
+}
+
+.g {
+    position: relative;
+    width: 100%;
+}
+
+.list-item-image {
+    width: 100%;
+    height: 430px;
+}
+
+.title_service {
+    font-size: 22px;
+    padding-top: 15px;
+    color: var(--heading-color);
+    font-weight: 500;
+    text-transform: uppercase;
+    text-align: center;
+}
+
+.description {
+    font-size: 18px;
+    color: var(--description-color);
+    text-align: center;
+    line-height: 30px;
+    padding: 10px;
+    letter-spacing: .5px;
+}
+
 
 
