Add Product Section

--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -16,9 +16,9 @@
     <header class="sticky-top">
         <nav class="navbar navbar-expand-lg navbar-light">
             <div class="container-fluid">
-              <a href="/">
-                <img src="./image/logo.png" alt="logo">
-            </a>
+                <a href="/">
+                    <img src="./image/logo.png" alt="logo">
+                </a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                     data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
                     aria-expanded="false" aria-label="Toggle navigation">
@@ -45,51 +45,90 @@
                     </div>
                 </div>
         </nav>
-      </header>
+    </header>
 
-      <main>
-        
+    <main>
+
         <section class="hero_container">
             <h1 tabindex="0" class="hero-title">comfy with indonesian vibes</h1>
         </section>
 
         <section class="explore_content" id="main_content">
-          <h3>Our Service</h3>
-  
-          <div class="grid-service">
-              <div class="g-col-6 g-col-md-4">
-                  <img class="list-item-image" src="./image/img3.jpg" alt="jumbotron" />
-                  <p class="title_service">
-                      Retail
-                  </p>
-                  <p class="description">
-                      Kami memiliki sejarah yang panjang dan pengalaman dalam memproduksi batik berkualitas tinggi
-                      untuk segala acara. Beberapa merk yang paling populer ada di e commerce kesayangan anda
-                  </p>
-              </div>
-              <div class="g-col-6 g-col-md-4">
-                  <img class="list-item-image" src="./image/img2.jpg" alt="jumbotron" />
-                  <p class="title_service">pesanan khusus</p>
-                  <p class="description">Melayani pemesanan khusus, baik pesanan pribadi dalam jumlah yang kecil
-                      maupun
-                      besar berupa
-                      pesanan perusahaan. Desainer kami yang berpengalaman, pekerja terlatih, dan fasilitas produksi
-                      yang
-                      mutakhir akan membantu klien kami untuk dapat merealisasikan visi mereka.</p>
-              </div>
-              <div class="g-col-6 g-col-md-4">
-                  <img class="list-item-image" src="./image/img4.jpg" alt="jumbotron" />
-                  <p class="title_service">Expor</p>
-                  <p class="description">Memiliki bisnis ekspor yang bertumbuh pesat. Meski Eropa adalah tujuan
-                      utamanya,
-                      kami juga melayani
-                      Negara-negara lain di Asia dan Amerika Utara sebagai pasar yang marak dan berkembang.</p>
-              </div>
-          </div>
-      </section>
-  
-      </main>
-    
+            <h3>Our Service</h3>
+
+            <div class="grid-service">
+                <div class="g-col-6 g-col-md-4">
+                    <img class="list-item-image" src="./image/img3.jpg" alt="jumbotron" />
+                    <p class="title_service">
+                        Retail
+                    </p>
+                    <p class="description">
+                        Kami memiliki sejarah yang panjang dan pengalaman dalam memproduksi batik berkualitas tinggi
+                        untuk segala acara. Beberapa merk yang paling populer ada di e commerce kesayangan anda
+                    </p>
+                </div>
+                <div class="g-col-6 g-col-md-4">
+                    <img class="list-item-image" src="./image/img2.jpg" alt="jumbotron" />
+                    <p class="title_service">pesanan khusus</p>
+                    <p class="description">Melayani pemesanan khusus, baik pesanan pribadi dalam jumlah yang kecil
+                        maupun
+                        besar berupa
+                        pesanan perusahaan. Desainer kami yang berpengalaman, pekerja terlatih, dan fasilitas produksi
+                        yang
+                        mutakhir akan membantu klien kami untuk dapat merealisasikan visi mereka.</p>
+                </div>
+                <div class="g-col-6 g-col-md-4">
+                    <img class="list-item-image" src="./image/img4.jpg" alt="jumbotron" />
+                    <p class="title_service">Expor</p>
+                    <p class="description">Memiliki bisnis ekspor yang bertumbuh pesat. Meski Eropa adalah tujuan
+                        utamanya,
+                        kami juga melayani
+                        Negara-negara lain di Asia dan Amerika Utara sebagai pasar yang marak dan berkembang.</p>
+                </div>
+            </div>
+        </section>
+
+        <section class="our_collection" id="product">
+            <h4>Our New Collection</h4>
+
+            <div class="grid-product">
+                <div class="list-product g-col-6 g-col-md-4">
+                    <img class="product-image" src="./image/product1.png" alt="product batik">
+                    <p class="title_product">Product Name</p>
+                </div>
+                <div class="list-product g-col-6 g-col-md-4">
+                    <img class="product-image" src="./image/product2.png" alt="product batik">
+                    <p class="title_product">Product Name</p>
+                </div>
+                <div class="list-product g-col-6 g-col-md-4">
+                    <img class="product-image" src="./image/product3.png" alt="product batik">
+                    <p class="title_product">Product Name</p>
+                </div>
+                <div class="list-product g-col-6 g-col-md-4">
+                    <img class="product-image" src="./image/product4.png" alt="product batik">
+                    <p class="title_product">Product Name</p>
+                </div>
+                <div class="list-product g-col-6 g-col-md-4">
+                    <img class="product-image" src="./image/product5.png" alt="product batik">
+                    <p class="title_product">Product Name</p>
+                </div>
+                <div class="list-product g-col-6 g-col-md-4">
+                    <img class="product-image" src="./image/product6.png" alt="product batik">
+                    <p class="title_product">Product Name</p>
+                </div>
+                <div class="list-product g-col-6 g-col-md-4">
+                    <img class="product-image" src="./image/product7.png" alt="product batik">
+                    <p class="title_product">Product Name</p>
+                </div>
+                <div class="list-product g-col-6 g-col-md-4">
+                    <img class="product-image" src="./image/product8.png" alt="product batik">
+                    <p class="title_product">Product Name</p>
+                </div>
+            </div>
+        </section>
+
+    </main>
+
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js"
         integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p"
         crossorigin="anonymous"></script>
