--- a/src/styles/responsive.css
+++ b/src/styles/responsive.css
@@ -38,10 +38,36 @@
         padding: 0;
     }
 
+    .product-image {
+        height: 45vh;
+    }
+
     .list-item-image {
         height: 35vh;
     }
-    
+
+    .our_collection h4 {
+        font-size: 28px;
+        padding: 24px;
+        font-weight: 600;
+    }
+
+    .title_product {
+        padding-top: 15px;
+        font-size: 20px;
+    }
+
+    .list-product {
+        padding: 0 24px 0 24px;
+        gap: 24px;
+    }
+
+    .list-product:hover {
+        transition: 1.5s;
+        transform: scale(1.05);
+        box-shadow: rgba(149, 157, 165, 0.2) 0px 8px 24px;
+    }
+
 }
 
 @media screen and (min-width: 900px) {
@@ -59,5 +85,12 @@
         grid-template-columns: 1fr 1fr 1fr;
         column-gap: 16px;
         margin: 32px auto;
+    }
+
+    .grid-product {
+        display: grid;
+        grid-template-columns: 1fr 1fr 1fr 1fr;
+        gap: 24px;
+        margin: 15px 45px;
     }
 }
