Add FAQs Section

--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -127,6 +127,122 @@
             </div>
         </section>
 
+        <section class="faqs" id="faqs">
+            <div class="batik-faqs">
+                <h4>Rumah Batik FAQs</h4>
+            </div>
+
+            <div class="accordion accordion-flush" id="accordionPanelsStayOpenExample">
+                <div class="accordion-item bg-transparent">
+                    <h2 class="accordion-header" id="panelsStayOpen-headingOne">
+                        <button class="accordion-button bg-transparent " type="button" data-bs-toggle="collapse"
+                            data-bs-target="#panelsStayOpen-collapseOne" aria-expanded="true"
+                            aria-controls="panelsStayOpen-collapseOne">
+                            Apa itu Rumah Batik Nusantara ?
+                        </button>
+                    </h2>
+                    <div id="panelsStayOpen-collapseOne" class="accordion-collapse collapse show"
+                        aria-labelledby="panelsStayOpen-headingOne">
+                        <div class="accordion-body ">
+                            Rumah Batik Nusantara merupakan salah satu perusahaan batik di Indonesia yang tetap
+                            mempertahankan kualitas dan warisan budaya nusantara Indonesia. Dari awal pendiriannya Rumah
+                            Batik Nusantara sangat menekankan "kualitas". Adapun filosofi perusahaan kami adalah
+                            "membangun budaya dalam produk"
+                        </div>
+                    </div>
+                </div>
+
+                <div class="accordion-item bg-transparent">
+                    <h2 class="accordion-header" id="panelsStayOpen-headingTwo">
+                        <button class="accordion-button collapsed bg-transparent " type="button"
+                            data-bs-toggle="collapse" data-bs-target="#panelsStayOpen-collapseTwo" aria-expanded="false"
+                            aria-controls="panelsStayOpen-collapseTwo">
+                            Kenapa saya harus belanja produk Rumah Batik Nusantara ?
+                        </button>
+                    </h2>
+                    <div id="panelsStayOpen-collapseTwo" class="accordion-collapse collapse"
+                        aria-labelledby="panelsStayOpen-headingTwo">
+                        <div class="accordion-body ">
+                            Anda dapat menemukan busana batik dengan desain yang unik, inovatif, dalam tampilan fashion
+                            modern. Hal tersebut bisa Anda lihat dari kekayaan dan keindahan motif Batik nusantara, yang
+                            dipadankan dengan warna yang menarik, jahitan dengan standar internasional, untuk tetap
+                            mempertahankan kualitasnya.
+                        </div>
+                    </div>
+                </div>
+
+                <div class="accordion-item bg-transparent">
+                    <h2 class="accordion-header" id="panelsStayOpen-headingThree">
+                        <button class="accordion-button collapsed bg-transparent " type="button"
+                            data-bs-toggle="collapse" data-bs-target="#panelsStayOpen-collapseThree"
+                            aria-expanded="false" aria-controls="panelsStayOpen-collapseThree">
+                            Produk apa saja yang dijual di Rumah Batik Nusantara ?
+                        </button>
+                    </h2>
+                    <div id="panelsStayOpen-collapseThree" class="accordion-collapse collapse"
+                        aria-labelledby="panelsStayOpen-headingThree">
+                        <div class="accordion-body">
+                            Produk yang ditawarkan oleh umah Batik Nusantara sangatlah beragam mulai dari busana Batik
+                            untuk anak-anak, remaja, hingga orang dewasa. Selain itu juga terdapat kerajinan khas
+                            nusantara,
+                        </div>
+                    </div>
+                </div>
+
+                <div class="accordion-item bg-transparent">
+                    <h2 class="accordion-header" id="panelsStayOpen-headingFour">
+                        <button class="accordion-button collapsed bg-transparent " type="button"
+                            data-bs-toggle="collapse" data-bs-target="#panelsStayOpen-collapseFour"
+                            aria-expanded="false" aria-controls="panelsStayOpen-collapseFour">
+                            Berapa range harga untuk produk yang ditawarkan oleh Rumah Batik Nusantara ?
+                        </button>
+                    </h2>
+                    <div id="panelsStayOpen-collapseFour" class="accordion-collapse collapse"
+                        aria-labelledby="panelsStayOpen-headingFour">
+                        <div class="accordion-body">
+                            Range harga untuk produk Rumah Batik Nusantara sangatlah beragam sesuai dengan kebutuhan
+                            Anda. Harga disesuaikan dengan jenis batik, mulai dari batik katun print, batik polyster,
+                            batik cap, batik batik tulis, hingga batik sutra
+                        </div>
+                    </div>
+                </div>
+
+                <div class="accordion-item bg-transparent">
+                    <h2 class="accordion-header" id="panelsStayOpen-headingFive">
+                        <button class="accordion-button collapsed bg-transparent " type="button"
+                            data-bs-toggle="collapse" data-bs-target="#panelsStayOpen-collapseFive"
+                            aria-expanded="false" aria-controls="panelsStayOpen-collapseFive">
+                            Dimana saya bisa mendapatkan produk Rumah Batik Nusantara ?
+                        </button>
+                    </h2>
+                    <div id="panelsStayOpen-collapseFive" class="accordion-collapse collapse"
+                        aria-labelledby="panelsStayOpen-headingFive">
+                        <div class="accordion-body">
+                            Produk - produk Rumah Batik Nusantara bisa didapatkan di toko - toko resmi kami yang ada di
+                            seluruh indonesia
+                        </div>
+                    </div>
+                </div>
+
+                <div class="accordion-item bg-transparent">
+                    <h2 class="accordion-header" id="panelsStayOpen-headingSix">
+                        <button class="accordion-button collapsed bg-transparent " type="button"
+                            data-bs-toggle="collapse" data-bs-target="#panelsStayOpen-collapseSix" aria-expanded="false"
+                            aria-controls="panelsStayOpen-collapseSix">
+                            Apakah Rumah Batik Nusantara melakukan penjualan online ?
+                        </button>
+                    </h2>
+                    <div id="panelsStayOpen-collapseSix" class="accordion-collapse collapse"
+                        aria-labelledby="panelsStayOpen-headingSix">
+                        <div class="accordion-body">
+                            kami telah melakukan penjualan secara online sejak September 2018. Penjualan online Rumah
+                            Batik Nusantara melalui : Akun Facebook di @RumahBatikNusantara, akun Instagram di
+                            @Rumahbatiknusantara , tokopedia dan dapat menghubungi kami di nomer WhatssApp 08xxxxxxxx
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
     </main>
 
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js"
