Add responsive footer

--- a/src/styles/responsive.css
+++ b/src/styles/responsive.css
@@ -68,6 +68,10 @@
         box-shadow: rgba(149, 157, 165, 0.2) 0px 8px 24px;
     }
 
+    footer {
+        font-size: 13px;
+    }
+
 }
 
 @media screen and (min-width: 900px) {
