--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -50,7 +50,9 @@
     </header>
 
     <main id="mainContent"></main>
-    <footer>Copyright © 2022. Rumah Batik Nusantara All right reserved.</footer>
+    <footer tabindex="0">
+        <p>Copyright © 2022. Rumah Batik Nusantara All right reserved.</p>
+        </footer>
 
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js"
         integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p" crossorigin="anonymous">
