--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -1,226 +1,232 @@
 @import url('https://fonts.googleapis.com/css2?family=Cormorant+Garamond:wght@400;500;600&display=swap');
 
-
 :root {
-    --heading-color: #566472;
-    --description-color: rgba(86, 100, 114, 0.7);
-    --primary-color: #373C54;
-    --hover: #D2AB67;
-    --divider: #E6E6E6;
-    --border: #E9E9E9;
-    --bg-color: #fcfcfc;
+  --heading-color: #566472;
+  --description-color: rgba(86, 100, 114, 0.7);
+  --primary-color: #373c54;
+  --hover: #d2ab67;
+  --divider: #e6e6e6;
+  --border: #e9e9e9;
+  --bg-color: #fcfcfc;
 }
 
 * {
-    padding: 0;
-    margin: 0;
-    box-sizing: border-box;
-    font-family: 'Cormorant Garamond', serif;
+  padding: 0;
+  margin: 0;
+  box-sizing: border-box;
+  font-family: 'Cormorant Garamond', serif;
 }
 
 body,
 html {
-    padding: 0;
-    margin: 0;
-    scroll-behavior: smooth;
-    background-color: var(--bg-color);
+  padding: 0;
+  margin: 0;
+  scroll-behavior: smooth;
+  background-color: var(--bg-color);
 }
 
 .skip_link {
-    position: fixed;
-    top: -400px;
-    left: 50%;
-    padding: 15px 20px;
+  position: fixed;
+  top: -400px;
+  left: 50%;
+  padding: 15px 20px;
 }
 
 .skip_link:focus {
-    top: 15px;
+  top: 15px;
 }
 
 /* Navbar */
 
 header {
-    padding: 15px 20px;
-    width: 100%;
-    background-color: #fff;
+  padding: 15px 20px;
+  width: 100%;
+  background-color: #fff;
 }
 
 .logo {
-    /* background-image: url('../public/image/logo.png'); */
-    /* background-color: #D2AB67;
+  /* background-image: url('../public/image/logo.png'); */
+  /* background-color: #D2AB67;
     width: 50%; */
-    height: 45px;
+  height: 45px;
 }
 
 .nav-item {
-    margin-right: 30px;
-    font-size: 20px;
+  margin-right: 30px;
+  font-size: 20px;
 }
 
 .nav-item a {
-    text-decoration: none;
-    color: var(--heading-color);
-    padding-bottom: 5px;
-    min-height: 44px;
+  text-decoration: none;
+  color: var(--heading-color);
+  padding-bottom: 5px;
+  min-height: 44px;
 }
 
 .nav-item a:after {
-    border-bottom: 3px solid var(--hover);
-    content: '';
-    display: block;
-    transition: all ease-in-out 0.2s;
-    width: 0;
+  border-bottom: 3px solid var(--hover);
+  content: '';
+  display: block;
+  transition: all ease-in-out 0.2s;
+  width: 0;
 }
 
 .nav-item a:hover {
-    color: var(--heading-color);
+  color: var(--heading-color);
 }
 
 .nav-item a:hover:after {
-    width: 100%;
+  width: 100%;
 }
 
 .navbar-toggler {
-    min-height: 44px;
-    min-width: 44px;
+  min-height: 44px;
+  min-width: 44px;
 }
 
 /* Hero */
 .hero_container {
-    display: flex;
-    align-items: center;
-    height: 80vh;
-    width: 100%;
-    text-align: center;
-    background-image: linear-gradient(90deg, rgba(18, 18, 18, 0.35),
-            rgba(18, 18, 18, 0.35)),
-        url("../public/image/img1.jpg");
-    background-size: cover;
-    background-position: center;
+  display: flex;
+  align-items: center;
+  height: 80vh;
+  width: 100%;
+  text-align: center;
+  background-image: linear-gradient(
+      90deg,
+      rgba(18, 18, 18, 0.35),
+      rgba(18, 18, 18, 0.35)
+    ),
+    url('../public/image/img1.jpg');
+  background-size: cover;
+  background-position: center;
 }
 
 .hero-title {
-    position: relative;
-    left: 50%;
-    color: #fff;
-    transform: translate(-50%, -50%);
-    text-transform: capitalize;
-    font-weight: 400;
-    letter-spacing: 2px;
-    font-size: 50px;
+  position: relative;
+  left: 50%;
+  color: #fff;
+  transform: translate(-50%, -50%);
+  text-transform: capitalize;
+  font-weight: 400;
+  letter-spacing: 2px;
+  font-size: 50px;
 }
 
 /*explore_content */
 
 .explore_content {
-    margin: auto 0;
-    width: 100%;
-    padding: 0 40px;
+  margin: auto 0;
+  width: 100%;
+  padding: 0 40px;
 }
 
 .explore_content h3 {
-    text-align: center;
-    color: var(--heading-color);
-    font-size: 38px;
-    font-weight: 500;
-    margin-top: 50px;
-    text-transform: uppercase;
+  text-align: center;
+  color: var(--heading-color);
+  font-size: 38px;
+  font-weight: 500;
+  margin-top: 50px;
+  text-transform: uppercase;
 }
 
 .g {
-    position: relative;
-    width: 100%;
+  position: relative;
+  width: 100%;
 }
 
 .list-item-image {
-    width: 100%;
-    height: 430px;
+  width: 100%;
+  height: 430px;
 }
 
 .title_service {
-    font-size: 22px;
-    padding-top: 15px;
-    color: var(--heading-color);
-    font-weight: 500;
-    text-transform: uppercase;
-    text-align: center;
+  font-size: 22px;
+  padding-top: 15px;
+  color: var(--heading-color);
+  font-weight: 500;
+  text-transform: uppercase;
+  text-align: center;
 }
 
 .description {
-    font-size: 18px;
-    color: var(--description-color);
-    text-align: center;
-    line-height: 30px;
-    padding: 10px;
-    letter-spacing: .5px;
+  font-size: 18px;
+  color: var(--description-color);
+  text-align: center;
+  line-height: 30px;
+  padding: 10px;
+  letter-spacing: 0.5px;
 }
 
 /* product */
 .our_collection h4 {
-    text-align: center;
-    color: var(--heading-color);
-    font-size: 38px;
-    font-weight: 500;
-    margin-top: 50px;
-    padding-bottom: 3%;
-    text-transform: uppercase;
+  text-align: center;
+  color: var(--heading-color);
+  font-size: 38px;
+  font-weight: 500;
+  margin-top: 50px;
+  padding-bottom: 3%;
+  text-transform: uppercase;
 }
 
 .list-product {
-    position: relative;
-    width: 100%;
-    background: #FFFFFF;
-    border: 1px solid rgba(233, 233, 233, 0.5);
+  position: relative;
+  width: 100%;
+  background: #ffffff;
+  border: 1px solid rgba(233, 233, 233, 0.5);
 }
 
 .list-product:hover {
-    transition: 1.5s;
-    transform: scale(1.05);
-    box-shadow: rgba(149, 157, 165, 0.2) 0px 8px 24px;
+  transition: 1.5s;
+  transform: scale(1.05);
+  box-shadow: rgba(149, 157, 165, 0.2) 0px 8px 24px;
 }
 
 .product-image {
-    width: 100%;
-    height: 320px;
+  width: 100%;
+  height: 320px;
 }
 
 .title_product {
-    font-size: 18px;
-    color: var(--heading-color);
-    font-weight: 600;
-    text-transform: capitalize;
-    text-align: center;
+  font-size: 18px;
+  color: var(--heading-color);
+  font-weight: 600;
+  text-transform: capitalize;
+  text-align: center;
 }
 
 /* faqs */
 .batik-faqs h4 {
-    text-align: center;
-    color: var(--heading-color);
-    font-size: 38px;
-    font-weight: 500;
-    margin-top: 50px;
-    padding-bottom: 3%;
-    text-transform: uppercase;
+  text-align: center;
+  color: var(--heading-color);
+  font-size: 38px;
+  font-weight: 500;
+  margin-top: 50px;
+  padding-bottom: 3%;
+  text-transform: uppercase;
 }
 
 .accordion {
-    margin: 15px 45px;
-    padding-bottom: 80px;
+  margin: 15px 45px;
+  padding-bottom: 80px;
 }
 
 .accordion-item .accordion-header button {
-    font-size: 25px;
+  font-size: 25px;
 }
 
 .accordion-body {
-    font-size: 18px;
+  font-size: 18px;
 }
 
 /* Footer */
 footer {
-    padding: 15px;
-    font-size: 16px;
-    text-align: center;
-    color: #fff;
-    background-color: var(--primary-color);
+  padding: 20px;
+  font-size: 16px;
+  text-align: center;
+  color: #fff;
+  background-color: var(--primary-color);
+}
+
+footer p {
+  margin-bottom: 0;
 }
