--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -4,8 +4,10 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="theme-color" content="#373c54" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Rumah Batik Nusantara">
+    <meta name="theme-color" content="#373c54" />
+    <link rel="apple-touch-icon" href="/icons/icon-192x192.png">
     <link rel="manifest" href="manifest.json">
     <title>Rumah Batik Nusantara</title>
 
@@ -52,14 +54,14 @@
     <main id="mainContent"></main>
     <footer tabindex="0">
         <p>Copyright © 2022. Rumah Batik Nusantara All right reserved.</p>
-        </footer>
+    </footer>
 
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js"
         integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p" crossorigin="anonymous">
-        </script>
+    </script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js"
         integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF" crossorigin="anonymous">
-        </script>
+    </script>
 </body>
 
 </html>
