--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -82,6 +82,7 @@ header {
 .navbar-toggler {
   min-height: 44px;
   min-width: 44px;
+  border: none;
 }
 
 /* Hero */
@@ -91,11 +92,9 @@ header {
   height: 80vh;
   width: 100%;
   text-align: center;
-  background-image: linear-gradient(
-      90deg,
+  background-image: linear-gradient(90deg,
       rgba(18, 18, 18, 0.35),
-      rgba(18, 18, 18, 0.35)
-    ),
+      rgba(18, 18, 18, 0.35)),
     url('../public/image/img1.jpg');
   background-size: cover;
   background-position: center;
@@ -120,7 +119,7 @@ header {
   padding: 0 40px;
 }
 
-.explore_content h3 {
+.explore_content h2 {
   text-align: center;
   color: var(--heading-color);
   font-size: 38px;
@@ -158,7 +157,7 @@ header {
 }
 
 /* product */
-.our_collection h4 {
+.our_collection h3 {
   text-align: center;
   color: var(--heading-color);
   font-size: 38px;
