--- a/src/styles/responsive.css
+++ b/src/styles/responsive.css
@@ -1,12 +1,42 @@
 @media screen and (max-width: 455px) {
+    /* navbar */
+
+    .navbar {
+        position: relative;
+        display: flex;
+        flex-wrap: wrap;
+        align-items: center;
+        justify-content: space-between;
+        padding-top: 0.5rem;
+    }
+
+    header {
+        padding: 0 15px;
+    }
+
+    .nav-item {
+        padding-top: 14px;
+    }
+
+    .nav-item a {
+        font-size: 16px;
+    }
 
     .hero-title {
         font-size: 35px;
         padding: 0 24px 0 24px;
     }
 
+    .navbar-collapse {
+        background-color: #f9fafb;
+        margin-top: 10px;
+        flex-basis: 100%;
+        flex-grow: 1;
+        align-items: center;
+    }
+
     /* service */
-    .explore_content h3 {
+    .explore_content h2 {
         font-size: 28px;
         padding: 24px;
         font-weight: 600;
@@ -42,7 +72,7 @@
         height: 35vh;
     }
 
-    .our_collection h4 {
+    .our_collection h3 {
         font-size: 28px;
         padding: 24px;
         font-weight: 600;
@@ -92,7 +122,26 @@
 
 }
 
+@media screen and (max-width: 850px) {
+    .container-fluid img {
+        height: 8vh;
+        padding: 0;
+    }
+
+    .nav-item {
+        padding-top: 14px;
+    }
+
+    .nav-item a {
+        font-size: 18px;
+    }
+}
+
 @media screen and (min-width: 900px) {
+    .nav-item {
+        margin-right: 30px;
+        font-size: 20px;
+    }
 
     .container-fluid img {
         padding-left: 50px;
@@ -103,10 +152,10 @@
     }
 
     /* contact */
-    .form-wrap p {
+    /* .form-wrap p {
         text-align: center !important;
         padding: 30px 15%;
-    }
+    } */
 
     .grid-service {
         display: grid;
