--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -26,14 +26,19 @@ html {
 }
 
 .skip_link {
-  position: fixed;
-  top: -400px;
-  left: 50%;
-  padding: 15px 20px;
+  position: absolute;
+  background-color: var(--primary-color);
+  padding: 10px;
+  top: -50px;
+  left: 0;
+  z-index: 1021;
+  color: white;
+  font-size: 15px;
+  text-decoration: none;
 }
 
 .skip_link:focus {
-  top: 15px;
+  top: 0;
 }
 
 /* Navbar */
@@ -87,9 +92,11 @@ header {
   height: 80vh;
   width: 100%;
   text-align: center;
-  background-image: linear-gradient(90deg,
+  background-image: linear-gradient(
+      90deg,
       rgba(18, 18, 18, 0.35),
-      rgba(18, 18, 18, 0.35)),
+      rgba(18, 18, 18, 0.35)
+    ),
     url('../public/image/img1.jpg');
   background-size: cover;
   background-position: center;
