--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -28,12 +28,13 @@ html {
 .skip_link {
   position: absolute;
   background-color: var(--primary-color);
-  padding: 10px;
+  padding: 10px 20px;
   top: -50px;
   left: 0;
   z-index: 1021;
   color: white;
-  font-size: 15px;
+  font-size: 18px;
+  font-weight: bold;
   text-decoration: none;
 }
 
